--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,11 +37,8 @@ main{
   .text-balance {
     text-wrap: normal;
   }
-  main{
-    width: 100dvw;
-    height: auto;
-    background-color: #000;
-    background-image: url('../../public/background.svg');
+  .main{
+    background-image: url('../../public/IMG_0092.JPG')!important;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
