--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,6 +27,9 @@ main{
   background-position: center;
   background-repeat: no-repeat;
 }
+input{
+  cursor: pointer;
+}
 
 @layer utilities {
   .text-balance {
