--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,7 +22,7 @@ body {
 }
 main{
   background-color: #000;
-  background-image: url('../../public/background.svg');
+  background-image: url('../../public/IMG_0092.JPG');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
